# NeurErrors

./: README.md  example.ipynb  pyproject.toml  requirements.txt  setup.cfg
neurerrors/: __init__.py
neurerrors/data/: Dataset_Client.py  __init__.py
neurerrors/data/saved_datasets/: graph_dataset.pt
neurerrors/data/seg_ids/: CA3_ID_tests.txt  ID_tests.txt  old_ids100K.txt
neurerrors/data/utils/: graph_dataset_functions.py  operation_finding_functions.py  visualization_functions.py
neurerrors/models/training/: evaluate.py  train.py
neurerrors/models/training/model_architecture/: Neuron_GNN.py
neurerrors/models/training/utils/: GraphDataset.py  evaluation_metrics.py
neurerrors/models/training/weights/: default_save.pt
